...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final state = ref.watch(mySouvenirListProvider);

    return Scaffold(
      appBar: AppBar(
        title: const Text('マイお土産'),
        actions: [
          IconButton(
            icon: const Icon(Icons.refresh),
            onPressed: () {
              ref.read(mySouvenirListProvider.notifier).reload();
            },
...
